[package]
name = "aaron-asm"
version = "0.5.0"
authors = ["saito"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.3"
num-traits = "0.2"

[lib]
path = "src/lib.rs"
name = "aaron_asm"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug = false
opt-level = "z"
overflow-checks = false
